--- a/LM_SCAD_MCP_cp_MODULE.ipynb
+++ b/LM_SCAD_MCP_cp_MODULE.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T23:57:21.919470Z",
-     "start_time": "2022-07-14T23:57:20.844528Z"
+     "end_time": "2022-07-20T20:45:48.727653Z",
+     "start_time": "2022-07-20T20:45:48.550907Z"
     }
    },
    "outputs": [],
@@ -51,8 +51,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T23:57:21.930070Z",
-     "start_time": "2022-07-14T23:57:21.920887Z"
+     "end_time": "2022-07-20T20:45:48.738081Z",
+     "start_time": "2022-07-20T20:45:48.728868Z"
     }
    },
    "outputs": [],
@@ -189,38 +189,38 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T23:57:22.274167Z",
-     "start_time": "2022-07-14T23:57:21.931230Z"
+     "end_time": "2022-07-20T20:45:49.059545Z",
+     "start_time": "2022-07-20T20:45:48.799154Z"
     }
    },
    "outputs": [],
    "source": [
-    "def update_smooth_grad_convex_LM(N, X, beta_md, y):\n",
+    "def _update_smooth_grad_convex_LM(N, X, beta_md, y):\n",
     "    '''\n",
     "    Update the gradient of the smooth convex objective component.\n",
     "    '''\n",
     "    return 1./N*X.T@(X@beta_md - y)\n",
     "\n",
-    "def update_smooth_grad_SCAD_LM(N, X, beta_md, y, _lambda, a):\n",
+    "def _update_smooth_grad_SCAD_LM(N, X, beta_md, y, _lambda, a):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for SCAD penalty.\n",
     "    '''\n",
-    "    return update_smooth_grad_convex_LM(N=N, X=X, beta_md=beta_md, y=y) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
+    "    return _update_smooth_grad_convex_LM(N=N, X=X, beta_md=beta_md, y=y) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
     "\n",
-    "def update_smooth_grad_MCP_LM(N, X, beta_md, y, _lambda, gamma):\n",
+    "def _update_smooth_grad_MCP_LM(N, X, beta_md, y, _lambda, gamma):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for MCP penalty.\n",
     "    '''\n",
-    "    return update_smooth_grad_convex_LM(N=N, X=X, beta_md=beta_md, y=y) + MCP_concave_grad(x=beta_md, lambda_=_lambda, gamma=gamma)\n",
+    "    return _update_smooth_grad_convex_LM(N=N, X=X, beta_md=beta_md, y=y) + MCP_concave_grad(x=beta_md, lambda_=_lambda, gamma=gamma)\n",
     "\n",
-    "def eval_obj_SCAD_LM(N, X, beta_md, y, _lambda, a, x_temp):\n",
+    "def _eval_obj_SCAD_LM(N, X, beta_md, y, _lambda, a, x_temp):\n",
     "    '''\n",
     "    evaluate value of the objective function.\n",
     "    '''\n",
     "    error = y - X@x_temp\n",
     "    return (error.T@error)/(2.*N) + cp.sum(SCAD(x_temp, lambda_=_lambda, a=a))\n",
     "\n",
-    "def eval_obj_MCP_LM(N, X, beta_md, y, _lambda, gamma, x_temp):\n",
+    "def _eval_obj_MCP_LM(N, X, beta_md, y, _lambda, gamma, x_temp):\n",
     "    '''\n",
     "    evaluate value of the objective function.\n",
     "    '''\n",
@@ -243,7 +243,7 @@
     "    lambda_max = cp.linalg.norm(grad_at_0, ord=cp.infty)\n",
     "    return lambda_max\n",
     "\n",
-    "def strong_rule_seq_LM(X, y, beta_old, lambda_new, lambda_old):\n",
+    "def _strong_rule_seq_LM(X, y, beta_old, lambda_new, lambda_old):\n",
     "    \"\"\"\n",
     "    Use sequential strong to determine which betas to be nullified next.\n",
     "    \"\"\"\n",
@@ -310,7 +310,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = cp.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (cp.linalg.norm(beta_md - beta_md_old, ord=cp.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_SCAD_LM(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
+    "            smooth_grad = _update_smooth_grad_SCAD_LM(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = cp.all(cp.max(cp.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -332,7 +332,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = cp.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (cp.linalg.norm(beta_md - beta_md_old, ord=cp.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_MCP_LM(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
+    "            smooth_grad = _update_smooth_grad_MCP_LM(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = cp.all(cp.max(cp.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -346,39 +346,39 @@
     "#     if self.penalty == \"SCAD\":\n",
     "#         L = max([self.L_convex, 1/(self.a-1)])\n",
     "#         self.vanilla_stepsize = 1/L\n",
-    "#         self.eval_obj_SCAD_LM(self.beta_md, self.obj_value)\n",
-    "#         self.eval_obj_SCAD_LM(self.beta, self.obj_value_ORIGINAL)\n",
-    "#         self.eval_obj_SCAD_LM(self.beta_ag, self.obj_value_AG)\n",
+    "#         self._eval_obj_SCAD_LM(self.beta_md, self.obj_value)\n",
+    "#         self._eval_obj_SCAD_LM(self.beta, self.obj_value_ORIGINAL)\n",
+    "#         self._eval_obj_SCAD_LM(self.beta_ag, self.obj_value_AG)\n",
     "#         self.old_beta = self.beta_md - 10.\n",
     "#         while not self.converged:\n",
     "#             self.k += 1\n",
     "#             if self.k <= self.maxit:\n",
-    "#                 self.update_smooth_grad_SCAD_LM()\n",
+    "#                 self._update_smooth_grad_SCAD_LM()\n",
     "#                 self.beta_md = self.soft_thresholding(self.beta_md - self.vanilla_stepsize*self.smooth_grad, self.vanilla_stepsize*self._lambda)\n",
     "#                 self.converged = cp.all(cp.max(cp.abs(self.beta_md - self.old_beta)) < self.tol).item()\n",
     "#                 self.old_beta = self.beta_md.copy()\n",
-    "#                 self.eval_obj_SCAD_LM(self.beta_md, self.obj_value)\n",
-    "#                 self.eval_obj_SCAD_LM(self.beta, self.obj_value_ORIGINAL)\n",
-    "#                 self.eval_obj_SCAD_LM(self.beta_ag, self.obj_value_AG)\n",
+    "#                 self._eval_obj_SCAD_LM(self.beta_md, self.obj_value)\n",
+    "#                 self._eval_obj_SCAD_LM(self.beta, self.obj_value_ORIGINAL)\n",
+    "#                 self._eval_obj_SCAD_LM(self.beta_ag, self.obj_value_AG)\n",
     "#             else:\n",
     "#                 break\n",
     "#     else:\n",
     "#         L = max([self.L_convex, 1/self.gamma])\n",
     "#         self.vanilla_stepsize = 1/L\n",
-    "#         self.eval_obj_MCP_LM(self.beta_md, self.obj_value)\n",
-    "#         self.eval_obj_MCP_LM(self.beta, self.obj_value_ORIGINAL)\n",
-    "#         self.eval_obj_MCP_LM(self.beta_ag, self.obj_value_AG)\n",
+    "#         self._eval_obj_MCP_LM(self.beta_md, self.obj_value)\n",
+    "#         self._eval_obj_MCP_LM(self.beta, self.obj_value_ORIGINAL)\n",
+    "#         self._eval_obj_MCP_LM(self.beta_ag, self.obj_value_AG)\n",
     "#         self.old_beta = self.beta_md - 10.\n",
     "#         while not self.converged:\n",
     "#             self.k += 1\n",
     "#             if self.k <= self.maxit:\n",
-    "#                 self.update_smooth_grad_MCP_LM()\n",
+    "#                 self._update_smooth_grad_MCP_LM()\n",
     "#                 self.beta_md = self.soft_thresholding(self.beta_md - self.vanilla_stepsize*self.smooth_grad, self.vanilla_stepsize*self._lambda)\n",
     "#                 self.converged = cp.all(cp.max(cp.abs(self.beta_md - self.old_beta)) < self.tol).item()\n",
     "#                 self.old_beta = self.beta_md.copy()\n",
-    "#                 self.eval_obj_MCP_LM(self.beta_md, self.obj_value)\n",
-    "#                 self.eval_obj_MCP_LM(self.beta, self.obj_value_ORIGINAL)\n",
-    "#                 self.eval_obj_MCP_LM(self.beta_ag, self.obj_value_AG)\n",
+    "#                 self._eval_obj_MCP_LM(self.beta_md, self.obj_value)\n",
+    "#                 self._eval_obj_MCP_LM(self.beta, self.obj_value_ORIGINAL)\n",
+    "#                 self._eval_obj_MCP_LM(self.beta_ag, self.obj_value_AG)\n",
     "#             else:\n",
     "#                 break\n",
     "#     return self.report_results()\n",
@@ -423,7 +423,7 @@
     "    if strongrule == True:\n",
     "        _lambda_max = lambda_max_LM(X, y)\n",
     "        p_original = X.shape[1]\n",
-    "        elim = strong_rule_seq_LM(X, y, beta_old=cp.zeros(p_original), lambda_new=_lambda, lambda_old=_lambda_max)\n",
+    "        elim = _strong_rule_seq_LM(X, y, beta_old=cp.zeros(p_original), lambda_new=_lambda, lambda_old=_lambda_max)\n",
     "        X = X[:, cp.logical_not(elim)]\n",
     "        beta = beta[cp.logical_not(elim)]\n",
     "        \n",
@@ -461,7 +461,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = cp.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (cp.linalg.norm(beta_md - beta_md_old, ord=cp.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_SCAD_LM(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
+    "            smooth_grad = _update_smooth_grad_SCAD_LM(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = cp.all(cp.max(cp.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -483,7 +483,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = cp.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (cp.linalg.norm(beta_md - beta_md_old, ord=cp.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_MCP_LM(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
+    "            smooth_grad = _update_smooth_grad_MCP_LM(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = cp.all(cp.max(cp.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -530,7 +530,7 @@
     "    lambda_ = cp.hstack((cp.array([_lambda_max]), lambda_))\n",
     "    elim = cp.array([False]*_design_matrix.shape[1])\n",
     "    for j in range(len(lambda_)-1):\n",
-    "        _elim = strong_rule_seq_LM(X=_design_matrix, y=outcome, beta_old=beta_mat[j,:], lambda_new=lambda_[j+1], lambda_old=lambda_[j])\n",
+    "        _elim = _strong_rule_seq_LM(X=_design_matrix, y=outcome, beta_old=beta_mat[j,:], lambda_new=lambda_[j+1], lambda_old=lambda_[j])\n",
     "        elim = cp.logical_and(elim, _elim)\n",
     "        _beta_0 = beta_mat[j,:]\n",
     "        _new_beta = cp.zeros(_design_matrix.shape[1])\n",
@@ -551,11 +551,21 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T23:58:05.994103Z",
-     "start_time": "2022-07-14T23:57:22.276590Z"
+     "end_time": "2022-07-20T20:46:13.876876Z",
+     "start_time": "2022-07-20T20:45:49.060740Z"
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/Snoopy/anaconda3/lib/python3.9/site-packages/cupy/random/_distributions.py:477: FutureWarning: cupy.random.multivariate_normal is experimental. The interface can change in the future.\n",
+      "  _util.experimental('cupy.random.multivariate_normal')\n",
+      "/home/Snoopy/anaconda3/lib/python3.9/site-packages/cupy/random/_generator.py:329: FutureWarning: cupy.random.RandomState.multivariate_normal is experimental. The interface can change in the future.\n",
+      "  _util.experimental('cupy.random.RandomState.multivariate_normal')\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -573,7 +583,7 @@
       "  -0.0409291 ]\n",
       " [ 1.25077918  1.77914363 -1.71551906 ...  0.50131765 -0.21777779\n",
       "  -0.04854701]]\n",
-      "4.78 s ± 62.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.68 s ± 40.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -621,8 +631,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T23:58:19.130662Z",
-     "start_time": "2022-07-14T23:58:06.000743Z"
+     "end_time": "2022-07-20T20:46:21.548346Z",
+     "start_time": "2022-07-20T20:46:13.877860Z"
     },
     "code_folding": []
    },
@@ -657,8 +667,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T23:58:21.066633Z",
-     "start_time": "2022-07-14T23:58:19.132007Z"
+     "end_time": "2022-07-20T20:46:30.059237Z",
+     "start_time": "2022-07-20T20:46:21.549797Z"
     }
    },
    "outputs": [
@@ -666,7 +676,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "241 ms ± 14.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "105 ms ± 2.4 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -679,8 +689,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T23:58:21.072373Z",
-     "start_time": "2022-07-14T23:58:21.067901Z"
+     "end_time": "2022-07-20T20:46:30.064792Z",
+     "start_time": "2022-07-20T20:46:30.060344Z"
     }
    },
    "outputs": [
@@ -706,8 +716,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T23:58:21.272997Z",
-     "start_time": "2022-07-14T23:58:21.073529Z"
+     "end_time": "2022-07-20T20:46:30.212538Z",
+     "start_time": "2022-07-20T20:46:30.066339Z"
     },
     "scrolled": true
    },
@@ -737,8 +747,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T23:58:21.282554Z",
-     "start_time": "2022-07-14T23:58:21.275508Z"
+     "end_time": "2022-07-20T20:46:30.215737Z",
+     "start_time": "2022-07-20T20:46:30.213518Z"
     }
    },
    "outputs": [
