--- a/logistic_SCAD_MCP_np_MODULE.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T17:52:29.416975Z",
-     "start_time": "2022-07-15T17:52:29.057958Z"
+     "end_time": "2022-07-20T20:51:02.803737Z",
+     "start_time": "2022-07-20T20:51:02.635779Z"
     }
    },
    "outputs": [],
@@ -50,8 +50,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T17:52:29.745178Z",
-     "start_time": "2022-07-15T17:52:29.418959Z"
+     "end_time": "2022-07-20T20:51:02.953504Z",
+     "start_time": "2022-07-20T20:51:02.805048Z"
     }
    },
    "outputs": [],
@@ -174,35 +174,35 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T17:52:29.839191Z",
-     "start_time": "2022-07-15T17:52:29.747107Z"
+     "end_time": "2022-07-20T20:51:02.997685Z",
+     "start_time": "2022-07-20T20:51:02.955071Z"
     }
    },
    "outputs": [],
    "source": [
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def update_smooth_grad_convex_logistic(N, X, beta_md, y):\n",
+    "def _update_smooth_grad_convex_logistic(N, X, beta_md, y):\n",
     "    '''\n",
     "    Update the gradient of the smooth convex objective component.\n",
     "    '''\n",
     "    return (X.T@(np.tanh(X@beta_md/2.)/2.-y+.5))/(2.*N)\n",
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def update_smooth_grad_SCAD_logistic(N, X, beta_md, y, _lambda, a):\n",
+    "def _update_smooth_grad_SCAD_logistic(N, X, beta_md, y, _lambda, a):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for SCAD penalty.\n",
     "    '''\n",
-    "    return update_smooth_grad_convex_logistic(N=N, X=X, beta_md=beta_md, y=y) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
+    "    return _update_smooth_grad_convex_logistic(N=N, X=X, beta_md=beta_md, y=y) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def update_smooth_grad_MCP_logistic(N, X, beta_md, y, _lambda, gamma):\n",
+    "def _update_smooth_grad_MCP_logistic(N, X, beta_md, y, _lambda, gamma):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for MCP penalty.\n",
     "    '''\n",
-    "    return update_smooth_grad_convex_logistic(N=N, X=X, beta_md=beta_md, y=y) + MCP_concave_grad(x=beta_md, lambda_=_lambda, gamma=gamma)\n",
+    "    return _update_smooth_grad_convex_logistic(N=N, X=X, beta_md=beta_md, y=y) + MCP_concave_grad(x=beta_md, lambda_=_lambda, gamma=gamma)\n",
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def eval_obj_SCAD_logistic(N, X, beta_md, y, _lambda, a, x_temp):\n",
+    "def _eval_obj_SCAD_logistic(N, X, beta_md, y, _lambda, a, x_temp):\n",
     "    '''\n",
     "    evaluate value of the objective function.\n",
     "    '''\n",
@@ -210,7 +210,7 @@
     "    return (error.T@error)/(2.*N) + np.sum(SCAD(x_temp, lambda_=_lambda, a=a))\n",
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def eval_obj_MCP_logistic(N, X, beta_md, y, _lambda, gamma, x_temp):\n",
+    "def _eval_obj_MCP_logistic(N, X, beta_md, y, _lambda, gamma, x_temp):\n",
     "    '''\n",
     "    evaluate value of the objective function.\n",
     "    '''\n",
@@ -227,7 +227,7 @@
     "    return lambda_max\n",
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def strong_rule_seq_logistic(X, y, beta_old, lambda_new, lambda_old):\n",
+    "def _strong_rule_seq_logistic(X, y, beta_old, lambda_new, lambda_old):\n",
     "    \"\"\"\n",
     "    Use sequential strong to determine which betas to be nullified next.\n",
     "    \"\"\"\n",
@@ -289,7 +289,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = np.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (np.linalg.norm(beta_md - beta_md_old, ord=np.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_SCAD_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
+    "            smooth_grad = _update_smooth_grad_SCAD_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -311,7 +311,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = np.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (np.linalg.norm(beta_md - beta_md_old, ord=np.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_MCP_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
+    "            smooth_grad = _update_smooth_grad_MCP_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -325,39 +325,39 @@
     "#     if self.penalty == \"SCAD\":\n",
     "#         L = max([self.L_convex, 1/(self.a-1)])\n",
     "#         self.vanilla_stepsize = 1/L\n",
-    "#         self.eval_obj_SCAD_logistic(self.beta_md, self.obj_value)\n",
-    "#         self.eval_obj_SCAD_logistic(self.beta, self.obj_value_ORIGINAL)\n",
-    "#         self.eval_obj_SCAD_logistic(self.beta_ag, self.obj_value_AG)\n",
+    "#         self._eval_obj_SCAD_logistic(self.beta_md, self.obj_value)\n",
+    "#         self._eval_obj_SCAD_logistic(self.beta, self.obj_value_ORIGINAL)\n",
+    "#         self._eval_obj_SCAD_logistic(self.beta_ag, self.obj_value_AG)\n",
     "#         self.old_beta = self.beta_md - 10.\n",
     "#         while not self.converged:\n",
     "#             self.k += 1\n",
     "#             if self.k <= self.maxit:\n",
-    "#                 self.update_smooth_grad_SCAD_logistic()\n",
+    "#                 self._update_smooth_grad_SCAD_logistic()\n",
     "#                 self.beta_md = self.soft_thresholding(self.beta_md - self.vanilla_stepsize*self.smooth_grad, self.vanilla_stepsize*self._lambda)\n",
     "#                 self.converged = np.all(np.max(np.abs(self.beta_md - self.old_beta)) < self.tol).item()\n",
     "#                 self.old_beta = self.beta_md.copy()\n",
-    "#                 self.eval_obj_SCAD_logistic(self.beta_md, self.obj_value)\n",
-    "#                 self.eval_obj_SCAD_logistic(self.beta, self.obj_value_ORIGINAL)\n",
-    "#                 self.eval_obj_SCAD_logistic(self.beta_ag, self.obj_value_AG)\n",
+    "#                 self._eval_obj_SCAD_logistic(self.beta_md, self.obj_value)\n",
+    "#                 self._eval_obj_SCAD_logistic(self.beta, self.obj_value_ORIGINAL)\n",
+    "#                 self._eval_obj_SCAD_logistic(self.beta_ag, self.obj_value_AG)\n",
     "#             else:\n",
     "#                 break\n",
     "#     else:\n",
     "#         L = max([self.L_convex, 1/self.gamma])\n",
     "#         self.vanilla_stepsize = 1/L\n",
-    "#         self.eval_obj_MCP_logistic(self.beta_md, self.obj_value)\n",
-    "#         self.eval_obj_MCP_logistic(self.beta, self.obj_value_ORIGINAL)\n",
-    "#         self.eval_obj_MCP_logistic(self.beta_ag, self.obj_value_AG)\n",
+    "#         self._eval_obj_MCP_logistic(self.beta_md, self.obj_value)\n",
+    "#         self._eval_obj_MCP_logistic(self.beta, self.obj_value_ORIGINAL)\n",
+    "#         self._eval_obj_MCP_logistic(self.beta_ag, self.obj_value_AG)\n",
     "#         self.old_beta = self.beta_md - 10.\n",
     "#         while not self.converged:\n",
     "#             self.k += 1\n",
     "#             if self.k <= self.maxit:\n",
-    "#                 self.update_smooth_grad_MCP_logistic()\n",
+    "#                 self._update_smooth_grad_MCP_logistic()\n",
     "#                 self.beta_md = self.soft_thresholding(self.beta_md - self.vanilla_stepsize*self.smooth_grad, self.vanilla_stepsize*self._lambda)\n",
     "#                 self.converged = np.all(np.max(np.abs(self.beta_md - self.old_beta)) < self.tol).item()\n",
     "#                 self.old_beta = self.beta_md.copy()\n",
-    "#                 self.eval_obj_MCP_logistic(self.beta_md, self.obj_value)\n",
-    "#                 self.eval_obj_MCP_logistic(self.beta, self.obj_value_ORIGINAL)\n",
-    "#                 self.eval_obj_MCP_logistic(self.beta_ag, self.obj_value_AG)\n",
+    "#                 self._eval_obj_MCP_logistic(self.beta_md, self.obj_value)\n",
+    "#                 self._eval_obj_MCP_logistic(self.beta, self.obj_value_ORIGINAL)\n",
+    "#                 self._eval_obj_MCP_logistic(self.beta_ag, self.obj_value_AG)\n",
     "#             else:\n",
     "#                 break\n",
     "#     return self.report_results()\n",
@@ -405,7 +405,7 @@
     "    if strongrule == True:\n",
     "        _lambda_max = lambda_max_logistic(X, y)\n",
     "        p_original = X.shape[1]\n",
-    "        elim = strong_rule_seq_logistic(X, y, beta_old=np.zeros(p_original), lambda_new=_lambda, lambda_old=_lambda_max)\n",
+    "        elim = _strong_rule_seq_logistic(X, y, beta_old=np.zeros(p_original), lambda_new=_lambda, lambda_old=_lambda_max)\n",
     "        X = X[:, np.logical_not(elim)]\n",
     "        beta = beta[np.logical_not(elim)]\n",
     "        \n",
@@ -443,7 +443,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = np.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (np.linalg.norm(beta_md - beta_md_old, ord=np.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_SCAD_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
+    "            smooth_grad = _update_smooth_grad_SCAD_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -465,7 +465,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = np.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (np.linalg.norm(beta_md - beta_md_old, ord=np.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_MCP_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
+    "            smooth_grad = _update_smooth_grad_MCP_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -514,7 +514,7 @@
     "    lambda_ = np.hstack((np.array([_lambda_max]), lambda_))\n",
     "    elim = np.array([False]*_design_matrix.shape[1])\n",
     "    for j in range(len(lambda_)-1):\n",
-    "        _elim = strong_rule_seq_logistic(X=_design_matrix, y=outcome, beta_old=beta_mat[j,:], lambda_new=lambda_[j+1], lambda_old=lambda_[j])\n",
+    "        _elim = _strong_rule_seq_logistic(X=_design_matrix, y=outcome, beta_old=beta_mat[j,:], lambda_new=lambda_[j+1], lambda_old=lambda_[j])\n",
     "        elim = np.logical_and(elim, _elim)\n",
     "        _beta_0 = beta_mat[j,:]\n",
     "        _new_beta = np.zeros(_design_matrix.shape[1])\n",
@@ -535,8 +535,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T17:53:01.767761Z",
-     "start_time": "2022-07-15T17:52:29.841108Z"
+     "end_time": "2022-07-20T20:51:16.128721Z",
+     "start_time": "2022-07-20T20:51:03.054570Z"
     }
    },
    "outputs": [
@@ -544,7 +544,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alphaIto\\AppData\\Local\\Temp\\ipykernel_14872\\1332484228.py:184: NumbaWarning: \u001b[1mCannot cache compiled function \"solution_path_logistic\" as it uses dynamic globals (such as ctypes pointers and large global arrays)\u001b[0m\n",
+      "/tmp/ipykernel_65051/2677154585.py:184: NumbaWarning: \u001b[1mCannot cache compiled function \"solution_path_logistic\" as it uses dynamic globals (such as ctypes pointers and large global arrays)\u001b[0m\n",
       "  @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n"
      ]
     }
@@ -583,8 +583,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T17:54:06.730237Z",
-     "start_time": "2022-07-15T17:53:01.769764Z"
+     "end_time": "2022-07-20T20:51:38.894448Z",
+     "start_time": "2022-07-20T20:51:16.130137Z"
     }
    },
    "outputs": [
@@ -592,8 +592,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "118 ms ± 4.52 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "6.91 s ± 104 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "41 ms ± 830 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "2.43 s ± 20 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -607,8 +607,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T17:54:06.745238Z",
-     "start_time": "2022-07-15T17:54:06.732240Z"
+     "end_time": "2022-07-20T20:51:38.899754Z",
+     "start_time": "2022-07-20T20:51:38.895519Z"
     }
    },
    "outputs": [
