--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -2,15 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T00:43:12.453771Z",
-     "start_time": "2022-07-14T00:43:12.449281Z"
+     "end_time": "2022-07-20T20:44:35.348167Z",
+     "start_time": "2022-07-20T20:44:34.916652Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/Snoopy/anaconda3/lib/python3.9/site-packages/paramiko/transport.py:236: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  \"class\": algorithms.Blowfish,\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "#from bgen_reader import open_bgen\n",
@@ -36,17 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T04:03:12.426335Z",
-     "start_time": "2022-07-20T04:03:12.403835Z"
+     "end_time": "2022-07-20T20:44:35.371018Z",
+     "start_time": "2022-07-20T20:44:35.349776Z"
     }
    },
    "outputs": [],
    "source": [
-    "def MI_continuous(a, b, a_min, a_max, N=500):\n",
+    "def _MI_continuous(a, b, a_min, a_max, N=500):\n",
     "    \"\"\"\n",
     "    calculate mutual information between continuous outcome and an SNP variable of 0,1,2\n",
     "    assume no missing data\n",
@@ -96,7 +105,7 @@
     "    mi_temp = np.sum(temp_mat)*forward_euler_step\n",
     "    return mi_temp\n",
     "\n",
-    "def MI_binary(a, b, a_min, a_max, N=500):\n",
+    "def _MI_binary(a, b, a_min, a_max, N=500):\n",
     "    \"\"\"\n",
     "    calculate mutual information between binary outcome and an SNP variable of 0,1,2\n",
     "    assume no missing data\n",
@@ -166,7 +175,7 @@
     "        _SNP = _SNP[gene_ind] # get gene iid also in outcome iid\n",
     "        _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
     "        _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
-    "        MI_UKBB[j] = MI_continuous(a=_outcome, b=_SNP, a_min = a_min, a_max = a_max, N=N)\n",
+    "        MI_UKBB[j] = _MI_continuous(a=_outcome, b=_SNP, a_min = a_min, a_max = a_max, N=N)\n",
     "    return MI_UKBB\n",
     "\n",
     "def binary_filter(bed_file, bim_file, fam_file, outcome, outcome_iid, a_min=100., a_max=250., N=500):\n",
@@ -185,7 +194,7 @@
     "        _SNP = _SNP[gene_ind] # get gene iid also in outcome iid\n",
     "        _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
     "        _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
-    "        MI_UKBB[j] = MI_binary(a=_outcome, b=_SNP, a_min = a_min, a_max = a_max, N=N)\n",
+    "        MI_UKBB[j] = _MI_binary(a=_outcome, b=_SNP, a_min = a_min, a_max = a_max, N=N)\n",
     "    return MI_UKBB\n",
     "\n",
     "\n",
@@ -207,7 +216,7 @@
     "            _SNP = _SNP[gene_ind] # get gene iid also in outcome iid\n",
     "            _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
     "            _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
-    "            _MI_slice[k] = MI_continuous(a=_outcome, b=_SNP, a_min = a_min, a_max = a_max, N=N)\n",
+    "            _MI_slice[k] = _MI_continuous(a=_outcome, b=_SNP, a_min = a_min, a_max = a_max, N=N)\n",
     "            k += 1\n",
     "        return _MI_slice\n",
     "    # multiprocessing starts here\n",
@@ -237,7 +246,7 @@
     "            _SNP = _SNP[gene_ind] # get gene iid also in outcome iid\n",
     "            _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
     "            _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
-    "            _MI_slice[k] = MI_binary(a=_outcome, b=_SNP, a_min = a_min, a_max = a_max, N=N)\n",
+    "            _MI_slice[k] = _MI_binary(a=_outcome, b=_SNP, a_min = a_min, a_max = a_max, N=N)\n",
     "            k += 1\n",
     "        return _MI_slice\n",
     "    # multiprocessing starts here\n",
@@ -252,31 +261,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T04:03:13.524923Z",
-     "start_time": "2022-07-20T04:03:13.237641Z"
+     "end_time": "2022-07-20T20:44:35.383991Z",
+     "start_time": "2022-07-20T20:44:35.372040Z"
     }
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mbinomial(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m.3\u001b[39m, \u001b[38;5;241m200\u001b[39m)\n\u001b[1;32m      2\u001b[0m b \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mbinomial(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m.3\u001b[39m, \u001b[38;5;241m200\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(MI_binary(a, b, a_min\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.\u001b[39m, a_max\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2.\u001b[39m, N\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m500\u001b[39m))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0861960938746857\n"
      ]
     }
    ],
    "source": [
     "a = np.random.binomial(2,.3, 200)\n",
     "b = np.random.binomial(2,.3, 200)\n",
-    "print(MI_binary(a, b, a_min=0., a_max=2., N=500))\n"
+    "print(_MI_binary(a, b, a_min=0., a_max=2., N=500))\n"
    ]
   },
   {
