--- a/LM_SCAD_MCP_np_MODULE.ipynb
+++ b/LM_SCAD_MCP_np_MODULE.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T17:49:32.227705Z",
-     "start_time": "2022-07-15T17:49:31.995624Z"
+     "end_time": "2022-07-20T20:47:15.536662Z",
+     "start_time": "2022-07-20T20:47:15.364413Z"
     }
    },
    "outputs": [],
@@ -49,8 +49,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T17:49:32.491623Z",
-     "start_time": "2022-07-15T17:49:32.229624Z"
+     "end_time": "2022-07-20T20:47:15.693686Z",
+     "start_time": "2022-07-20T20:47:15.537954Z"
     }
    },
    "outputs": [],
@@ -173,35 +173,35 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T17:49:32.585732Z",
-     "start_time": "2022-07-15T17:49:32.493626Z"
+     "end_time": "2022-07-20T20:47:15.739307Z",
+     "start_time": "2022-07-20T20:47:15.695074Z"
     }
    },
    "outputs": [],
    "source": [
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def update_smooth_grad_convex_LM(N, X, beta_md, y):\n",
+    "def _update_smooth_grad_convex_LM(N, X, beta_md, y):\n",
     "    '''\n",
     "    Update the gradient of the smooth convex objective component.\n",
     "    '''\n",
     "    return 1/N*X.T@(X@beta_md - y)\n",
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def update_smooth_grad_SCAD_LM(N, X, beta_md, y, _lambda, a):\n",
+    "def _update_smooth_grad_SCAD_LM(N, X, beta_md, y, _lambda, a):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for SCAD penalty.\n",
     "    '''\n",
-    "    return update_smooth_grad_convex_LM(N=N, X=X, beta_md=beta_md, y=y) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
+    "    return _update_smooth_grad_convex_LM(N=N, X=X, beta_md=beta_md, y=y) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def update_smooth_grad_MCP_LM(N, X, beta_md, y, _lambda, gamma):\n",
+    "def _update_smooth_grad_MCP_LM(N, X, beta_md, y, _lambda, gamma):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for MCP penalty.\n",
     "    '''\n",
-    "    return update_smooth_grad_convex_LM(N=N, X=X, beta_md=beta_md, y=y) + MCP_concave_grad(x=beta_md, lambda_=_lambda, gamma=gamma)\n",
+    "    return _update_smooth_grad_convex_LM(N=N, X=X, beta_md=beta_md, y=y) + MCP_concave_grad(x=beta_md, lambda_=_lambda, gamma=gamma)\n",
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def eval_obj_SCAD_LM(N, X, beta_md, y, _lambda, a, x_temp):\n",
+    "def _eval_obj_SCAD_LM(N, X, beta_md, y, _lambda, a, x_temp):\n",
     "    '''\n",
     "    evaluate value of the objective function.\n",
     "    '''\n",
@@ -209,7 +209,7 @@
     "    return (error.T@error)/(2.*N) + np.sum(SCAD(x_temp, lambda_=_lambda, a=a))\n",
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def eval_obj_MCP_LM(N, X, beta_md, y, _lambda, gamma, x_temp):\n",
+    "def _eval_obj_MCP_LM(N, X, beta_md, y, _lambda, gamma, x_temp):\n",
     "    '''\n",
     "    evaluate value of the objective function.\n",
     "    '''\n",
@@ -234,7 +234,7 @@
     "    return lambda_max\n",
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def strong_rule_seq_LM(X, y, beta_old, lambda_new, lambda_old):\n",
+    "def _strong_rule_seq_LM(X, y, beta_old, lambda_new, lambda_old):\n",
     "    \"\"\"\n",
     "    Use sequential strong to determine which betas to be nullified next.\n",
     "    \"\"\"\n",
@@ -302,7 +302,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = np.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (np.linalg.norm(beta_md - beta_md_old, ord=np.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_SCAD_LM(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
+    "            smooth_grad = _update_smooth_grad_SCAD_LM(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -324,7 +324,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = np.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (np.linalg.norm(beta_md - beta_md_old, ord=np.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_MCP_LM(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
+    "            smooth_grad = _update_smooth_grad_MCP_LM(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -338,39 +338,39 @@
     "#     if self.penalty == \"SCAD\":\n",
     "#         L = max([self.L_convex, 1/(self.a-1)])\n",
     "#         self.vanilla_stepsize = 1/L\n",
-    "#         self.eval_obj_SCAD_LM(self.beta_md, self.obj_value)\n",
-    "#         self.eval_obj_SCAD_LM(self.beta, self.obj_value_ORIGINAL)\n",
-    "#         self.eval_obj_SCAD_LM(self.beta_ag, self.obj_value_AG)\n",
+    "#         self._eval_obj_SCAD_LM(self.beta_md, self.obj_value)\n",
+    "#         self._eval_obj_SCAD_LM(self.beta, self.obj_value_ORIGINAL)\n",
+    "#         self._eval_obj_SCAD_LM(self.beta_ag, self.obj_value_AG)\n",
     "#         self.old_beta = self.beta_md - 10.\n",
     "#         while not self.converged:\n",
     "#             self.k += 1\n",
     "#             if self.k <= self.maxit:\n",
-    "#                 self.update_smooth_grad_SCAD_LM()\n",
+    "#                 self._update_smooth_grad_SCAD_LM()\n",
     "#                 self.beta_md = self.soft_thresholding(self.beta_md - self.vanilla_stepsize*self.smooth_grad, self.vanilla_stepsize*self._lambda)\n",
     "#                 self.converged = np.all(np.max(np.abs(self.beta_md - self.old_beta)) < self.tol).item()\n",
     "#                 self.old_beta = self.beta_md.copy()\n",
-    "#                 self.eval_obj_SCAD_LM(self.beta_md, self.obj_value)\n",
-    "#                 self.eval_obj_SCAD_LM(self.beta, self.obj_value_ORIGINAL)\n",
-    "#                 self.eval_obj_SCAD_LM(self.beta_ag, self.obj_value_AG)\n",
+    "#                 self._eval_obj_SCAD_LM(self.beta_md, self.obj_value)\n",
+    "#                 self._eval_obj_SCAD_LM(self.beta, self.obj_value_ORIGINAL)\n",
+    "#                 self._eval_obj_SCAD_LM(self.beta_ag, self.obj_value_AG)\n",
     "#             else:\n",
     "#                 break\n",
     "#     else:\n",
     "#         L = max([self.L_convex, 1/self.gamma])\n",
     "#         self.vanilla_stepsize = 1/L\n",
-    "#         self.eval_obj_MCP_LM(self.beta_md, self.obj_value)\n",
-    "#         self.eval_obj_MCP_LM(self.beta, self.obj_value_ORIGINAL)\n",
-    "#         self.eval_obj_MCP_LM(self.beta_ag, self.obj_value_AG)\n",
+    "#         self._eval_obj_MCP_LM(self.beta_md, self.obj_value)\n",
+    "#         self._eval_obj_MCP_LM(self.beta, self.obj_value_ORIGINAL)\n",
+    "#         self._eval_obj_MCP_LM(self.beta_ag, self.obj_value_AG)\n",
     "#         self.old_beta = self.beta_md - 10.\n",
     "#         while not self.converged:\n",
     "#             self.k += 1\n",
     "#             if self.k <= self.maxit:\n",
-    "#                 self.update_smooth_grad_MCP_LM()\n",
+    "#                 self._update_smooth_grad_MCP_LM()\n",
     "#                 self.beta_md = self.soft_thresholding(self.beta_md - self.vanilla_stepsize*self.smooth_grad, self.vanilla_stepsize*self._lambda)\n",
     "#                 self.converged = np.all(np.max(np.abs(self.beta_md - self.old_beta)) < self.tol).item()\n",
     "#                 self.old_beta = self.beta_md.copy()\n",
-    "#                 self.eval_obj_MCP_LM(self.beta_md, self.obj_value)\n",
-    "#                 self.eval_obj_MCP_LM(self.beta, self.obj_value_ORIGINAL)\n",
-    "#                 self.eval_obj_MCP_LM(self.beta_ag, self.obj_value_AG)\n",
+    "#                 self._eval_obj_MCP_LM(self.beta_md, self.obj_value)\n",
+    "#                 self._eval_obj_MCP_LM(self.beta, self.obj_value_ORIGINAL)\n",
+    "#                 self._eval_obj_MCP_LM(self.beta_ag, self.obj_value_AG)\n",
     "#             else:\n",
     "#                 break\n",
     "#     return self.report_results()\n",
@@ -418,7 +418,7 @@
     "    if strongrule == True:\n",
     "        _lambda_max = lambda_max_LM(X, y)\n",
     "        p_original = X.shape[1]\n",
-    "        elim = strong_rule_seq_LM(X, y, beta_old=np.zeros(p_original), lambda_new=_lambda, lambda_old=_lambda_max)\n",
+    "        elim = _strong_rule_seq_LM(X, y, beta_old=np.zeros(p_original), lambda_new=_lambda, lambda_old=_lambda_max)\n",
     "        X = X[:, np.logical_not(elim)]\n",
     "        beta = beta[np.logical_not(elim)]\n",
     "        \n",
@@ -456,7 +456,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = np.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (np.linalg.norm(beta_md - beta_md_old, ord=np.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_SCAD_LM(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
+    "            smooth_grad = _update_smooth_grad_SCAD_LM(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -478,7 +478,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = np.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (np.linalg.norm(beta_md - beta_md_old, ord=np.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_MCP_LM(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
+    "            smooth_grad = _update_smooth_grad_MCP_LM(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -527,7 +527,7 @@
     "    lambda_ = np.hstack((np.array([_lambda_max]), lambda_))\n",
     "    elim = np.array([False]*_design_matrix.shape[1])\n",
     "    for j in range(len(lambda_)-1):\n",
-    "        _elim = strong_rule_seq_LM(X=_design_matrix, y=outcome, beta_old=beta_mat[j,:], lambda_new=lambda_[j+1], lambda_old=lambda_[j])\n",
+    "        _elim = _strong_rule_seq_LM(X=_design_matrix, y=outcome, beta_old=beta_mat[j,:], lambda_new=lambda_[j+1], lambda_old=lambda_[j])\n",
     "        elim = np.logical_and(elim, _elim)\n",
     "        _beta_0 = beta_mat[j,:]\n",
     "        _new_beta = np.zeros(_design_matrix.shape[1])\n",
@@ -548,29 +548,11 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T17:50:28.525459Z",
-     "start_time": "2022-07-15T17:49:32.587623Z"
+     "end_time": "2022-07-20T20:47:32.129409Z",
+     "start_time": "2022-07-20T20:47:15.848230Z"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\alphaIto\\AppData\\Local\\Temp\\ipykernel_16288\\932946465.py:345: NumbaPerformanceWarning: \u001b[1m\u001b[1m\u001b[1m'@' is faster on contiguous arrays, called on (array(float64, 1d, C), array(float64, 2d, A))\u001b[0m\u001b[0m\u001b[0m\n",
-      "  _lambda_max = lambda_max_LM(_design_matrix, outcome)\n",
-      "C:\\Users\\alphaIto\\AppData\\Local\\Temp\\ipykernel_16288\\932946465.py:345: NumbaPerformanceWarning: \u001b[1m\u001b[1m'@' is faster on contiguous arrays, called on (array(float64, 1d, C), array(float64, 2d, A))\u001b[0m\u001b[0m\n",
-      "  _lambda_max = lambda_max_LM(_design_matrix, outcome)\n",
-      "C:\\Users\\alphaIto\\AppData\\Local\\Temp\\ipykernel_16288\\932946465.py:349: NumbaPerformanceWarning: \u001b[1m\u001b[1m\u001b[1m'@' is faster on contiguous arrays, called on (array(float64, 1d, C), array(float64, 2d, A))\u001b[0m\u001b[0m\u001b[0m\n",
-      "  _elim = strong_rule_seq_LM(X=_design_matrix, y=outcome, beta_old=beta_mat[j,:], lambda_new=lambda_[j+1], lambda_old=lambda_[j])\n",
-      "C:\\Users\\alphaIto\\AppData\\Local\\Temp\\ipykernel_16288\\932946465.py:349: NumbaPerformanceWarning: \u001b[1m\u001b[1m\u001b[1m'@' is faster on contiguous arrays, called on (array(float64, 2d, A), array(float64, 1d, C))\u001b[0m\u001b[0m\u001b[0m\n",
-      "  _elim = strong_rule_seq_LM(X=_design_matrix, y=outcome, beta_old=beta_mat[j,:], lambda_new=lambda_[j+1], lambda_old=lambda_[j])\n",
-      "C:\\Users\\alphaIto\\AppData\\Local\\Temp\\ipykernel_16288\\932946465.py:349: NumbaPerformanceWarning: \u001b[1m\u001b[1m'@' is faster on contiguous arrays, called on (array(float64, 1d, C), array(float64, 2d, A))\u001b[0m\u001b[0m\n",
-      "  _elim = strong_rule_seq_LM(X=_design_matrix, y=outcome, beta_old=beta_mat[j,:], lambda_new=lambda_[j+1], lambda_old=lambda_[j])\n",
-      "C:\\Users\\alphaIto\\AppData\\Local\\Temp\\ipykernel_16288\\932946465.py:349: NumbaPerformanceWarning: \u001b[1m\u001b[1m'@' is faster on contiguous arrays, called on (array(float64, 2d, A), array(float64, 1d, C))\u001b[0m\u001b[0m\n",
-      "  _elim = strong_rule_seq_LM(X=_design_matrix, y=outcome, beta_old=beta_mat[j,:], lambda_new=lambda_[j+1], lambda_old=lambda_[j])\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -588,7 +570,7 @@
       "  -8.95442224e-02  0.00000000e+00]\n",
       " [ 1.25529526e+00  1.86767007e+00 -1.90691276e+00 ...  1.00662533e-01\n",
       "  -9.61300285e-02  1.36140337e-04]]\n",
-      "4.15 s ± 97.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.74 s ± 34.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -634,8 +616,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T17:51:00.230141Z",
-     "start_time": "2022-07-15T17:50:28.527461Z"
+     "end_time": "2022-07-20T20:47:43.462537Z",
+     "start_time": "2022-07-20T20:47:32.130648Z"
     },
     "code_folding": []
    },
@@ -644,7 +626,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alphaIto\\AppData\\Local\\Temp\\ipykernel_16288\\932946465.py:198: NumbaWarning: \u001b[1mCannot cache compiled function \"solution_path_LM\" as it uses dynamic globals (such as ctypes pointers and large global arrays)\u001b[0m\n",
+      "/tmp/ipykernel_64750/2504139658.py:198: NumbaWarning: \u001b[1mCannot cache compiled function \"solution_path_LM\" as it uses dynamic globals (such as ctypes pointers and large global arrays)\u001b[0m\n",
       "  @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n"
      ]
     }
@@ -678,8 +660,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T17:51:09.564171Z",
-     "start_time": "2022-07-15T17:51:00.232145Z"
+     "end_time": "2022-07-20T20:47:46.233707Z",
+     "start_time": "2022-07-20T20:47:43.463719Z"
     }
    },
    "outputs": [
@@ -687,7 +669,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.16 s ± 34.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "346 ms ± 6.68 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -700,8 +682,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T17:51:09.580173Z",
-     "start_time": "2022-07-15T17:51:09.565170Z"
+     "end_time": "2022-07-20T20:47:46.239229Z",
+     "start_time": "2022-07-20T20:47:46.235338Z"
     }
    },
    "outputs": [
@@ -727,8 +709,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T17:51:09.705170Z",
-     "start_time": "2022-07-15T17:51:09.582175Z"
+     "end_time": "2022-07-20T20:47:46.379356Z",
+     "start_time": "2022-07-20T20:47:46.240345Z"
     },
     "scrolled": true
    },
