--- a/logistic_SCAD_MCP_cp_MODULE.ipynb
+++ b/logistic_SCAD_MCP_cp_MODULE.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T23:57:21.899389Z",
-     "start_time": "2022-07-14T23:57:20.886453Z"
+     "end_time": "2022-07-20T20:49:38.913763Z",
+     "start_time": "2022-07-20T20:49:38.744725Z"
     }
    },
    "outputs": [],
@@ -51,8 +51,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T23:57:21.910280Z",
-     "start_time": "2022-07-14T23:57:21.900705Z"
+     "end_time": "2022-07-20T20:49:38.923994Z",
+     "start_time": "2022-07-20T20:49:38.915008Z"
     }
    },
    "outputs": [],
@@ -189,44 +189,44 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T23:57:22.276027Z",
-     "start_time": "2022-07-14T23:57:21.911442Z"
+     "end_time": "2022-07-20T20:49:39.223425Z",
+     "start_time": "2022-07-20T20:49:38.978160Z"
     }
    },
    "outputs": [],
    "source": [
-    "def update_smooth_grad_convex_logistic(N, X, beta_md, y):\n",
+    "def _update_smooth_grad_convex_logistic(N, X, beta_md, y):\n",
     "    '''\n",
     "    Update the gradient of the smooth convex objective component.\n",
     "    '''\n",
     "    return (X.T@(cp.tanh(X@beta_md/2.)/2.-y+.5))/(2.*N)\n",
     "\n",
-    "def update_smooth_grad_convex_logistic(N, X, beta_md, y):\n",
+    "def _update_smooth_grad_convex_logistic(N, X, beta_md, y):\n",
     "    '''\n",
     "    Update the gradient of the smooth convex objective component.\n",
     "    '''\n",
     "    return 1./N*X.T@(X@beta_md - y)\n",
     "\n",
-    "def update_smooth_grad_SCAD_logistic(N, X, beta_md, y, _lambda, a):\n",
+    "def _update_smooth_grad_SCAD_logistic(N, X, beta_md, y, _lambda, a):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for SCAD penalty.\n",
     "    '''\n",
-    "    return update_smooth_grad_convex_logistic(N=N, X=X, beta_md=beta_md, y=y) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
+    "    return _update_smooth_grad_convex_logistic(N=N, X=X, beta_md=beta_md, y=y) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
     "\n",
-    "def update_smooth_grad_MCP_logistic(N, X, beta_md, y, _lambda, gamma):\n",
+    "def _update_smooth_grad_MCP_logistic(N, X, beta_md, y, _lambda, gamma):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for MCP penalty.\n",
     "    '''\n",
-    "    return update_smooth_grad_convex_logistic(N=N, X=X, beta_md=beta_md, y=y) + MCP_concave_grad(x=beta_md, lambda_=_lambda, gamma=gamma)\n",
+    "    return _update_smooth_grad_convex_logistic(N=N, X=X, beta_md=beta_md, y=y) + MCP_concave_grad(x=beta_md, lambda_=_lambda, gamma=gamma)\n",
     "\n",
-    "def eval_obj_SCAD_logistic(N, X, beta_md, y, _lambda, a, x_temp):\n",
+    "def _eval_obj_SCAD_logistic(N, X, beta_md, y, _lambda, a, x_temp):\n",
     "    '''\n",
     "    evaluate value of the objective function.\n",
     "    '''\n",
     "    error = y - X@x_temp\n",
     "    return (error.T@error)/(2.*N) + cp.sum(SCAD(x_temp, lambda_=_lambda, a=a))\n",
     "\n",
-    "def eval_obj_MCP_logistic(N, X, beta_md, y, _lambda, gamma, x_temp):\n",
+    "def _eval_obj_MCP_logistic(N, X, beta_md, y, _lambda, gamma, x_temp):\n",
     "    '''\n",
     "    evaluate value of the objective function.\n",
     "    '''\n",
@@ -249,7 +249,7 @@
     "    lambda_max = cp.linalg.norm(grad_at_0, ord=cp.infty)\n",
     "    return lambda_max\n",
     "\n",
-    "def strong_rule_seq_logistic(X, y, beta_old, lambda_new, lambda_old):\n",
+    "def _strong_rule_seq_logistic(X, y, beta_old, lambda_new, lambda_old):\n",
     "    \"\"\"\n",
     "    Use sequential strong to determine which betas to be nullified next.\n",
     "    \"\"\"\n",
@@ -316,7 +316,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = cp.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (cp.linalg.norm(beta_md - beta_md_old, ord=cp.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_SCAD_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
+    "            smooth_grad = _update_smooth_grad_SCAD_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = cp.all(cp.max(cp.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -338,7 +338,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = cp.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (cp.linalg.norm(beta_md - beta_md_old, ord=cp.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_MCP_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
+    "            smooth_grad = _update_smooth_grad_MCP_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = cp.all(cp.max(cp.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -352,39 +352,39 @@
     "#     if self.penalty == \"SCAD\":\n",
     "#         L = max([self.L_convex, 1/(self.a-1)])\n",
     "#         self.vanilla_stepsize = 1/L\n",
-    "#         self.eval_obj_SCAD_logistic(self.beta_md, self.obj_value)\n",
-    "#         self.eval_obj_SCAD_logistic(self.beta, self.obj_value_ORIGINAL)\n",
-    "#         self.eval_obj_SCAD_logistic(self.beta_ag, self.obj_value_AG)\n",
+    "#         self._eval_obj_SCAD_logistic(self.beta_md, self.obj_value)\n",
+    "#         self._eval_obj_SCAD_logistic(self.beta, self.obj_value_ORIGINAL)\n",
+    "#         self._eval_obj_SCAD_logistic(self.beta_ag, self.obj_value_AG)\n",
     "#         self.old_beta = self.beta_md - 10.\n",
     "#         while not self.converged:\n",
     "#             self.k += 1\n",
     "#             if self.k <= self.maxit:\n",
-    "#                 self.update_smooth_grad_SCAD_logistic()\n",
+    "#                 self._update_smooth_grad_SCAD_logistic()\n",
     "#                 self.beta_md = self.soft_thresholding(self.beta_md - self.vanilla_stepsize*self.smooth_grad, self.vanilla_stepsize*self._lambda)\n",
     "#                 self.converged = cp.all(cp.max(cp.abs(self.beta_md - self.old_beta)) < self.tol).item()\n",
     "#                 self.old_beta = self.beta_md.copy()\n",
-    "#                 self.eval_obj_SCAD_logistic(self.beta_md, self.obj_value)\n",
-    "#                 self.eval_obj_SCAD_logistic(self.beta, self.obj_value_ORIGINAL)\n",
-    "#                 self.eval_obj_SCAD_logistic(self.beta_ag, self.obj_value_AG)\n",
+    "#                 self._eval_obj_SCAD_logistic(self.beta_md, self.obj_value)\n",
+    "#                 self._eval_obj_SCAD_logistic(self.beta, self.obj_value_ORIGINAL)\n",
+    "#                 self._eval_obj_SCAD_logistic(self.beta_ag, self.obj_value_AG)\n",
     "#             else:\n",
     "#                 break\n",
     "#     else:\n",
     "#         L = max([self.L_convex, 1/self.gamma])\n",
     "#         self.vanilla_stepsize = 1/L\n",
-    "#         self.eval_obj_MCP_logistic(self.beta_md, self.obj_value)\n",
-    "#         self.eval_obj_MCP_logistic(self.beta, self.obj_value_ORIGINAL)\n",
-    "#         self.eval_obj_MCP_logistic(self.beta_ag, self.obj_value_AG)\n",
+    "#         self._eval_obj_MCP_logistic(self.beta_md, self.obj_value)\n",
+    "#         self._eval_obj_MCP_logistic(self.beta, self.obj_value_ORIGINAL)\n",
+    "#         self._eval_obj_MCP_logistic(self.beta_ag, self.obj_value_AG)\n",
     "#         self.old_beta = self.beta_md - 10.\n",
     "#         while not self.converged:\n",
     "#             self.k += 1\n",
     "#             if self.k <= self.maxit:\n",
-    "#                 self.update_smooth_grad_MCP_logistic()\n",
+    "#                 self._update_smooth_grad_MCP_logistic()\n",
     "#                 self.beta_md = self.soft_thresholding(self.beta_md - self.vanilla_stepsize*self.smooth_grad, self.vanilla_stepsize*self._lambda)\n",
     "#                 self.converged = cp.all(cp.max(cp.abs(self.beta_md - self.old_beta)) < self.tol).item()\n",
     "#                 self.old_beta = self.beta_md.copy()\n",
-    "#                 self.eval_obj_MCP_logistic(self.beta_md, self.obj_value)\n",
-    "#                 self.eval_obj_MCP_logistic(self.beta, self.obj_value_ORIGINAL)\n",
-    "#                 self.eval_obj_MCP_logistic(self.beta_ag, self.obj_value_AG)\n",
+    "#                 self._eval_obj_MCP_logistic(self.beta_md, self.obj_value)\n",
+    "#                 self._eval_obj_MCP_logistic(self.beta, self.obj_value_ORIGINAL)\n",
+    "#                 self._eval_obj_MCP_logistic(self.beta_ag, self.obj_value_AG)\n",
     "#             else:\n",
     "#                 break\n",
     "#     return self.report_results()\n",
@@ -429,7 +429,7 @@
     "    if strongrule == True:\n",
     "        _lambda_max = lambda_max_logistic(X, y)\n",
     "        p_original = X.shape[1]\n",
-    "        elim = strong_rule_seq_logistic(X, y, beta_old=cp.zeros(p_original), lambda_new=_lambda, lambda_old=_lambda_max)\n",
+    "        elim = _strong_rule_seq_logistic(X, y, beta_old=cp.zeros(p_original), lambda_new=_lambda, lambda_old=_lambda_max)\n",
     "        X = X[:, cp.logical_not(elim)]\n",
     "        beta = beta[cp.logical_not(elim)]\n",
     "        \n",
@@ -467,7 +467,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = cp.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (cp.linalg.norm(beta_md - beta_md_old, ord=cp.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_SCAD_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
+    "            smooth_grad = _update_smooth_grad_SCAD_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = cp.all(cp.max(cp.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -489,7 +489,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = cp.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (cp.linalg.norm(beta_md - beta_md_old, ord=cp.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_MCP_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
+    "            smooth_grad = _update_smooth_grad_MCP_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = cp.all(cp.max(cp.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -536,7 +536,7 @@
     "    lambda_ = cp.hstack((cp.array([_lambda_max]), lambda_))\n",
     "    elim = cp.array([False]*_design_matrix.shape[1])\n",
     "    for j in range(len(lambda_)-1):\n",
-    "        _elim = strong_rule_seq_logistic(X=_design_matrix, y=outcome, beta_old=beta_mat[j,:], lambda_new=lambda_[j+1], lambda_old=lambda_[j])\n",
+    "        _elim = _strong_rule_seq_logistic(X=_design_matrix, y=outcome, beta_old=beta_mat[j,:], lambda_new=lambda_[j+1], lambda_old=lambda_[j])\n",
     "        elim = cp.logical_and(elim, _elim)\n",
     "        _beta_0 = beta_mat[j,:]\n",
     "        _new_beta = cp.zeros(_design_matrix.shape[1])\n",
@@ -557,11 +557,22 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T23:57:30.636509Z",
-     "start_time": "2022-07-14T23:57:22.278118Z"
+     "end_time": "2022-07-20T20:49:44.692061Z",
+     "start_time": "2022-07-20T20:49:39.224831Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/Snoopy/anaconda3/lib/python3.9/site-packages/cupy/random/_distributions.py:477: FutureWarning: cupy.random.multivariate_normal is experimental. The interface can change in the future.\n",
+      "  _util.experimental('cupy.random.multivariate_normal')\n",
+      "/home/Snoopy/anaconda3/lib/python3.9/site-packages/cupy/random/_generator.py:329: FutureWarning: cupy.random.RandomState.multivariate_normal is experimental. The interface can change in the future.\n",
+      "  _util.experimental('cupy.random.RandomState.multivariate_normal')\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.markers as markers\n",
@@ -598,8 +609,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T23:58:26.520365Z",
-     "start_time": "2022-07-14T23:57:30.638115Z"
+     "end_time": "2022-07-20T20:50:28.152642Z",
+     "start_time": "2022-07-20T20:49:44.693013Z"
     }
    },
    "outputs": [
@@ -607,8 +618,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "217 ms ± 17.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "6.71 s ± 986 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "96 ms ± 1.36 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "4.46 s ± 22.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -622,8 +633,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T23:58:26.529070Z",
-     "start_time": "2022-07-14T23:58:26.523323Z"
+     "end_time": "2022-07-20T20:50:28.158273Z",
+     "start_time": "2022-07-20T20:50:28.153890Z"
     }
    },
    "outputs": [
